# RebornEasyLoginManager

./: .gitignore  AccountDialog.cpp  AccountDialog.h  CLAUDE.md  CMakeLists.txt  Icons.h  IniParser.cpp  IniParser.h  LanguageManager.cpp  LanguageManager.h  Languages.h  MainFrame.cpp  MainFrame.h  README.md  SettingsDialog.cpp  index.html  main.cpp  styles.css  vcpkg.json
.claude/: launch.json
.github/workflows/: build.yml  pages.yml
i18n/: el.json  en.json  fr.json  os.json  pl.json  pt.json  zh.json
site/: index.html  styles.css
tests/: CMakeLists.txt  test_ini_parser.cpp  test_language_manager.cpp
